# reverie-link

./: .claudeignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  PROJECT_SUMMARY.md  README.md  TTS_DESIGN.md  VOICE_INPUT_DESIGN.md  appearance.html  history.html  index.html  package-lock.json  package.json  settings.html  start.bat  vite.config.ts  桌宠视觉感知系统分析与优化方案.md
data/: chat_history.db  known_games.json  notebook.db  notebook.db-shm  notebook.db-wal
data/vector_db/: chroma.sqlite3
scripts/: copy-vad-models.js
sidecar/: .env.example  download_stt_model.py  main.py  prompt_builder.py  requirements.txt
sidecar/memory/: __init__.py  db_chat.py  db_notebook.py  extractor.py  models.py  vector_store.py
sidecar/prompt/: __init__.py  constants.py  messages.py  system_prompt.py
sidecar/routers/: live2d.py  memory_api.py  tts.py
sidecar/tts/: __init__.py  base.py  manager.py
sidecar/utils/: dedup.py  emotion.py  logging_setup.py
sidecar/vision/: __init__.py  activity_monitor.py  capture_strategy.py  event_buffer.py  game_detector.py  scene_manager.py  screen_capture.py  speech_engine.py  vision_system.py  vlm_client.py
sidecar/voice/: __init__.py  conversation_context.py  intent_filter.py  interrupt_handler.py  processor.py  stt_engine.py  text_sanitizer.py  window_quick_check.py
src/: App.vue  AppearanceApp.vue  HistoryApp.vue  SettingsApp.vue  appearance-main.ts  history-main.ts  main.ts  settings-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+46 files in other folders)
